sand-macros/tests/cases/fail_function_empty.rs
use sand_macros::function;

#[function("")]
fn bad() {}

fn main() {}
